--- a/src/createposition.html
+++ b/src/createposition.html
@@ -94,7 +94,7 @@
 
                                 <div class="col">
                                     <label for="notes">Notes:</label>
-                                    <textarea class="form-control" style="resize: none; height: 108px;" id="notes" rows="3"></textarea>
+                                    <textarea class="form-control" style="resize: none; height: 81pt;" id="notes" rows="3"></textarea>
                                 </div>
                               </div>
 							  <input action="admin.html" type="submit" value="Create" class="btn btn-primary px-5 mt-4 createbtn">
