--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card my-5">
-                    <form id="login" class="card-body cardbody-color p-lg-5" accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="">
+                    <form id="login" class="card-body cardbody-color p-lg-5 needs-validation" novalidate accept-charset="UTF-8" enctype="multipart/form-data" method="GET" onsubmit="return submitlogin()">
                         <h2 class="text-center mt-4">GTA Application Portal</h2>
                         
                         <div class="text-center">
@@ -27,12 +27,18 @@
 
                         <div class="input-group mb-3 login-input">
                             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                            <input type="text" class="form-control" id="email" placeholder="UMKC Email">
+                            <input type="text" class="form-control" id="email" placeholder="UMKC Email" required>
+                            <div class="invalid-feedback">
+                                Please enter your UMKC email.
+                            </div>
                         </div>
 
-                        <div class="input-group mb-3 login-input">
+                        <div class="input-group mb-3 login-input has-validation">
                             <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password" pattern="^().{6,24}$" required>
+                            <div class="invalid-feedback">
+                                Please enter your password for UMKC account.
+                            </div>
                         </div>
  
                         <div class="error" id="loginerror"></div>
@@ -47,6 +53,27 @@
     </div>
  <!--Script added for bootstrap-->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+ <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+(function () {
+  'use strict'
+  var html='';
+
+  var forms = document.querySelectorAll('.needs-validation')
+
+  Array.prototype.slice.call(forms).forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+          validatelogin()
+        }
+        form.classList.add('was-validated');  }, false)
+    })
+})()
+
+ </script>
 </body>
 </html>
 
