--- a/src/applicants.html
+++ b/src/applicants.html
@@ -26,9 +26,15 @@
     body{
     background-color:#ebf2fa;
     }
+    .btn{
+    background-color:#0066cc;
+    }
+    .btn:hover{
+    background-color: #FFdd00;
+    border-color: #FFdd00;
+    color:#0066cc;
+    }
   </style>
-
-
   <title>Applicants</title>
 </head>
 <body>
@@ -70,11 +76,14 @@
                     </tr>
                 </tbody>
             </table>
+            <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
+
             </div>
             
     
     <script>
     $('#sortTable').DataTable();
     </script>    
+
 </body>
 </html>
