--- a/src/studentform.html
+++ b/src/studentform.html
@@ -29,7 +29,7 @@
           <div class="card my-5">
               <div class="card-body cardbody-color p-lg-5">
                 <h4 class="mt-2">Application Form</h4>
-                <form name="Form" action="javascript:modal()" accept-charset="UTF-8" enctype="multipart/form-data" method="POST" onsubmit="return submitForm()" class="needs-validation" novalidate>
+                <form name="Form" id="application" action="javascript:modal()" accept-charset="UTF-8" enctype="multipart/form-data" method="POST" onsubmit="" class="needs-validation" novalidate>
                  
                   <div id="basics">
                     <div class="row mb-3">
