--- a/src/createposition.html
+++ b/src/createposition.html
@@ -94,10 +94,14 @@
 
                                 <div class="col">
                                     <label for="notes">Notes:</label>
-                                    <textarea class="form-control" style="resize: none; height: 81pt;" id="notes" rows="3"></textarea>
+                                    <textarea class="form-control" style="resize: none; height: 106px;" id="notes" rows="3"></textarea>
                                 </div>
                               </div>
-							  <input action="admin.html" type="submit" value="Create" class="btn btn-primary px-5 mt-4 createbtn">
+							            <input action="admin.html" type="submit" value="Create" class="btn btn-primary px-5 mt-4 createbtn">
+                          <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
+
+                          
+
                         </form>
                         <!--<a href="admin.html" type="submit" class="btn btn-primary px-5 mt-4 createbtn" >Create</a>-->
                     </div>
