--- a/src/admin.html
+++ b/src/admin.html
@@ -36,7 +36,7 @@
             <h5 class="card-header" id="classname">IT 390 (Class Name)</h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
-                <button id="button" onClick="parent.location=(this.value)" value="applicants.html" class="open-position-btn btn btn-primary float-end">See Applicants</button>
+                <button id="button" onClick="writeApplicants(this.value)" value="" class="open-position-btn btn btn-primary float-end">See Applicants</button>
                 <br>
                 <label class="card-title">Notes:</label><span id="notes">None</span>
                 <a href="#" class="open-position-btn btn btn-primary float-end">Close Position</a>
