--- a/src/applicants.html
+++ b/src/applicants.html
@@ -42,7 +42,7 @@
         </div>
     
         <div class="container applicants my-5" style="width:70%";>
-            <h2> Applicants for <span id="course">"Class"</span> <span id="position">"Position"</span> position:</h2>
+            <h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
             <table class="table table-striped table-bordered" id="sortTable">
                 <thead>
                     <tr>
