--- a/src/applicants.html
+++ b/src/applicants.html
@@ -48,7 +48,9 @@
                     <tr>
                     <th>Name</th>
                     <th>GPA</th>
+					<th>Hours</th>
                     <th>Level</th>
+					<th>Major</th>
                     <th>Student Id</th>
                     <th>Email</th>
                     <th>Documents</th>
@@ -59,7 +61,9 @@
                     <tr>
                         <td>Student1</td>
                         <td>4.00</td>
+						<td>96</td>
                         <td>Bachelor</td>
+						<td>CS</td>
                         <td>S111111</td>
                         <td>student@umsystem.edu</td>
                         <td><button>Document</button></td>
@@ -68,7 +72,9 @@
                     <tr>
                         <td>Student2</td>
                         <td>3.00</td>
+						<td>156</td>
                         <td>Master</td>
+						<td>CS</td>
                         <td>S111112</td>
                         <td>student2@umsystem.edu</td>
                         <td><button>Document</button></td>
