--- a/src/applicants.html
+++ b/src/applicants.html
@@ -81,7 +81,7 @@
                     </tr>
                 </tbody>
             </table>
-            <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a><br><br>
+            <a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
 
             </div>
 </body>
