--- a/src/applicants.html
+++ b/src/applicants.html
@@ -43,6 +43,22 @@
     
         <div class="container applicants my-5" style="width:70%";>
             <h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
+	<div class="" id="filter">	
+      <hr>
+      <div id="position">
+        <input type="checkbox" name="pos" value="Director">Director
+        <input type="checkbox" name="pos" value="Integration Specialist">Integration Specialist
+        <input type="checkbox" name="pos" value="Javascript Developer">Javascript Developer
+        <input type="checkbox" name="pos" value="System Architect">System Architect
+      </div>
+      <hr>
+      <div id="ofice">
+        <input type="checkbox" name="ofc" value="Edinburgh">Edinburgh
+        <input type="checkbox" name="ofc" value="New York">New York
+        <input type="checkbox" name="ofc" value="San Francisco">San Francisco
+      </div>
+      <hr>
+	  </div>
             <table class="table table-striped table-bordered" id="sortTable">
                 <thead>
                     <tr>
