--- a/src/admin.html
+++ b/src/admin.html
@@ -30,7 +30,7 @@
             </div>
         </h2>
     </div>
-<!--<div class="filter">
+<div class="filter">
     <div class="checkbox">
         <label><input type="checkbox" rel="CS" onchange="change('typecheckbox')"/>CS</label>
     </div>
@@ -64,7 +64,7 @@
     <div class="checkbox">
         <label><input type="checkbox" rel="undergrad" onchange="change('gradcheckbox')"/>Undergraduate </label>
     </div>
-</div>-->
+</div>
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
