--- a/src/admin.html
+++ b/src/admin.html
@@ -24,66 +24,57 @@
         <h2 class="m-5 mt-2">Open Positions:
             <div class="input-group float-end">
                 <input type="text" id="Search" onkeyup="Search()" class="form-control rounded" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-                <button class="btn btn-primary" id="advanced-search-button" type="button">
+                <span  class="btn btn-primary" id="advanced-search-button" type="button">
                     <i class="fa fa-search"></i>
-                  </button>            
+                  </span>            
             </div>
         </h2>
     </div>
 <div class="filter">
     <div class="checkbox">
-        <label><input type="checkbox" rel="CS" onchange="change('typecheckbox')"/>CS</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="IT" onchange="change('typecheckbox')"/>IT</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="ECE" onchange="change('typecheckbox')"/>ECE</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="EE" onchange="change('typecheckbox')"/>EE</label>
+        <label class="checkbox"><input type="checkbox" rel="CS" onchange="filter()"/>CS</label>
+        <label class="checkbox"><input type="checkbox" rel="IT" onchange="filter()"/>IT</label>
+        <label class="checkbox"><input type="checkbox" rel="ECE" onchange="filter()"/>ECE</label>
+        <label class="checkbox"><input type="checkbox" rel="EE" onchange="filter()"/>EE</label>
     </div>
 	<div class="checkbox">
-        <label><input type="checkbox" rel="Grader" onchange="change('positioncheckbox')"/>Grader</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="Instructor" onchange="change('positioncheckbox')"/>Instructor</label>
+        <label class="checkbox"><input type="checkbox" rel="Grader" onchange="filter()"/>Grader</label>
+        <label class="checkbox"><input type="checkbox" rel="Instructor" onchange="filter()"/>Instructor</label>
     </div>
 	<div class="checkbox">
-        <label><input type="checkbox" rel="Fall" onchange="change('semestercheckbox')"/>Fall</label>
+        <label class="checkbox"><input type="checkbox" rel="Fall" onchange="filter()"/>Fall</label>
+        <label class="checkbox"><input type="checkbox" rel="Spring" onchange="filter()"/>Spring</label>
+        <label class="checkbox"><input type="checkbox" rel="Summer" onchange="filter()"/>Summer</label>
     </div>
 	<div class="checkbox">
-        <label><input type="checkbox" rel="Spring" onchange="change('semestercheckbox')"/>Spring</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="Summer" onchange="change('semestercheckbox')"/>Summer</label>
+        <label class="checkbox"><input type="checkbox" rel="grad" onchange="filter()"/>Graduate</label>
+        <label class="checkbox"><input type="checkbox" rel="undergrad" onchange="filter()"/>Undergraduate </label>
     </div>
 	<div class="checkbox">
-        <label><input type="checkbox" rel="grad" onchange="change('gradcheckbox')"/>Graduate</label>
-    </div>
-    <div class="checkbox">
-        <label><input type="checkbox" rel="undergrad" onchange="change('gradcheckbox')"/>Undergraduate </label>
+        <label class="checkbox"><input type="checkbox" rel="applicants" onchange="filter()" checked/>Applicants</label>
+        <label class="checkbox"><input type="checkbox" rel="noapplicants" onchange="filter()"/>No Applicants </label>
     </div>
 </div>
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <h5 class="card-header" id="classname">IT 390 (Class Name)</h5>
+            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<label class="float-end"><span id="applicants">0 Applicants</span></label></h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
-                <button id="seebutton" onClick="writeApplicants(this.value)" value="" class="open-position-btn btn btn-primary float-end">See Applicants</button>
-                <br>
-				<label class="card-title  mt-2 mb-3">Semester:</label><span id="semester">Summer</span> <button id="editbutton" onClick="editCourse(this.value)" value="" class="open-position-btn btn btn-primary float-end">Edit Position</button>
-                <br>
+				
+                <button id="seebutton" onClick="writeApplicants(this.value)" value="" class="open-position-btn btn btn-primary float-end">See Applicants</button><br>
+				<!--<label class="card-title  mt-2 mb-3">Semester:</label><span id="semester">Summer</span> 
+				<button id="editbutton" onClick="editCourse(this.value)" value="" class="open-position-btn btn btn-primary float-end">Edit Position</button><br>-->
                 <label class="card-title">Notes:</label><span id="notes">None</span>				
-                <a href="#" class="open-position-btn btn btn-primary float-end">Close Position</a>
+				<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>
                 <br>
             </div>
         </div>
     </div>
 
     <div class="text-center mt-3">
-        <a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>
+		<button id="editbutton" onClick="editCourse(this.value)" value="new" class="open-position-btn btn btn-primary">Add Position</button>
+        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
 
  <!--Script added for bootstrap-->
