--- a/src/createposition.html
+++ b/src/createposition.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" type="text/css" href="style/css.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/position/positionprocess.js"></script>
-  <!--<script type="module" src="index.js"></script>-->
+  <script src="script/position/positionsubmit.js"></script>
+  <script type="module" src="script/position/positiondatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Create Position</title>
 </head>
@@ -24,7 +25,7 @@
                 <div class="card my-5">
                     <div class="card-body cardbody-color p-lg-5">
                         <h4 class="mt-2">Create a new position:</h4>
-                        <form class="needs-validation" novalidate>
+                        <form id="courseform" class="needs-validation" onsubmit="" novalidate>
                             <div class="row">
                               <div class="col">
                                 <label for="class">Class: </label>
@@ -48,9 +49,9 @@
 										<select id="position" class="dropdown dropdown-toggle" required>
                                           <ul class="dropdown-menu">
 										    <option selected disabled value=''>Choose Position...</option>
-											<option value="0">Grader</option>
-											<option value="1">Lab Instructor</option>
-											<option value="2">Both</option>
+											<option value="Grader">Grader</option>
+											<option value="Instructor">Lab Instructor</option>
+											<!--<option value="Both">Both</option>-->
                                           </ul>    
                                         </select>
                                 <div class="invalid-feedback">
@@ -77,17 +78,22 @@
     
                                         <div class="col mt-3">
                                             <label for="semester">Semester:</label>
-                                            <select id="semester" class="dropdown dropdown-toggle" required>
+											<div class="checkbox-group required">
+												<input type="checkbox" class="semester-option" name="semester" id="0" onclick="semesterValidation()" required><label for="0">Fall</label>
+												 <input type="checkbox" class="semester-option" name="semester" id="1" onclick="semesterValidation()" required><label for="1">Spring</label>
+												 <input type="checkbox" class="semester-option" name="semester" id="2" onclick="semesterValidation()" required><label for="2">Summer</label>
+												 <div class="invalid-feedback">
+													Please choose a semester.
+												</div>
+											</div>
+                                            <!--<select id="semester" class="dropdown dropdown-toggle" required>
                                               <ul class="dropdown-menu">
 											    <option selected disabled value=''>Choose Semester...</option>
                                                 <option>Spring</option>
                                                 <option>Summer</option>
                                                 <option>Fall</option>
                                               </ul>   
-                                            </select>
-                                            <div class="invalid-feedback">
-                                              Please choose a semester.
-                                            </div>
+                                            </select>-->
                                         </div>
                                     </div>
                                 </div>
