--- a/src/studentform.html
+++ b/src/studentform.html
@@ -110,14 +110,14 @@
                       <div class="col">
                         <label class="form-label" for="level">Current Level:</label>
                         <div>
-                          <input class="form-check-input level" type="radio" required id="0" name="level" value="0">
-                          <label class="form-check-label" for="0" id="BSlabel">BS</label>
+                          <input class="form-check-input level" type="radio" required id="BS" name="level" value="0">
+                          <label class="form-check-label" for="BS" id="BSlabel">BS</label>
                         
-                          <input class="form-check-input level" type="radio" required id="1" name="level" value="1">
-                          <label class="form-check-label" for="1">MS</label>
+                          <input class="form-check-input level" type="radio" required id="MS" name="level" value="1">
+                          <label class="form-check-label" for="MS">MS</label>
 
-                          <input class="form-check-input level" type="radio" required id="2" name="level" value="2">
-                          <label class="form-check-label" for="2">PhD</label>
+                          <input class="form-check-input level" type="radio" required id="PhD" name="level" value="2">
+                          <label class="form-check-label" for="PhD">PhD</label>
                           <div class="invalid-feedback">
                             Please select your current level.
                           </div>
@@ -127,14 +127,14 @@
                      <div class="col">
                         <label class="form-label" for="applyterm">What term you are applying for?</label>
                         <div>
-                          <input class="form-check-input applyterm" type="radio" required id="0" name="applyterm" value="0">
-                          <label class="form-check-label" for="0">Fall</label>
+                          <input class="form-check-input applyterm" type="radio" required id="Fall" name="applyterm" value="0">
+                          <label class="form-check-label" for="Fall">Fall</label>
                         
-                          <input class="form-check-input applyterm" type="radio" required id="1" name="applyterm" value="1">
-                          <label class="form-check-label" for="1">Spring</label>
+                          <input class="form-check-input applyterm" type="radio" required id="Spring" name="applyterm" value="1">
+                          <label class="form-check-label" for="Spring">Spring</label>
 
-                          <input class="form-check-input applyterm" type="radio" required id="2" name="applyterm" value="2">
-                          <label class="form-check-label" for="2">Summer</label>
+                          <input class="form-check-input applyterm" type="radio" required id="Summer" name="applyterm" value="2">
+                          <label class="form-check-label" for="Summer">Summer</label>
                           <div class="invalid-feedback">
                             Please select the term you are applying for.
                           </div>
