--- a/src/createposition.html
+++ b/src/createposition.html
@@ -46,11 +46,11 @@
                               </div>
                               <div class="col">
                                 <label for="position">Position: </label>
-										<select id="position" class="dropdown dropdown-toggle" required>
+										<select id="position" class="dropdown dropdown-toggle form-control" required>
                                           <ul class="dropdown-menu">
 										    <option selected disabled value=''>Choose Position...</option>
-											<option value="Grader">Grader</option>
-											<option value="Instructor">Lab Instructor</option>
+											<option value="G">Grader</option>
+											<option value="R">Lab Instructor</option>
 											<!--<option value="Both">Both</option>-->
                                           </ul>    
                                         </select>
@@ -64,7 +64,7 @@
                                 <div class="col">
                                     <div class="col">
                                         <label for="level">Level:</label>
-                                        <select id="level" class="dropdown dropdown-toggle" required>
+                                        <select id="level" class="dropdown dropdown-toggle form-control" required>
                                           <ul class="dropdown-menu">
 										    <option selected disabled value=''>Choose Level...</option>
                                             <option>BS</option>
