--- a/src/studentform.html
+++ b/src/studentform.html
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </div>
-                     <div class="col">
+                     <!--<div class="col">
                         <label class="form-label" for="applyterm">What term you are applying for?</label>
                         <div>
                           <input class="form-check-input applyterm" type="radio" required id="Fall" name="applyterm" value="0">
@@ -139,7 +139,7 @@
                             Please select the term you are applying for.
                           </div>
                         </div>
-                      </div>                                                          
+                      </div>-->                                                          
                     <div id="gta" class="col" hidden>
                         <label class="form-label" for="GTA">Are you GTA Certified?</label>
                         <div>
