--- a/src/admin.html
+++ b/src/admin.html
@@ -32,33 +32,33 @@
     </div>
 <div class="filter">
     <div class="checkbox">
-        <label class="checkbox"><input type="checkbox" rel="CS" onchange="filter()"/>CS</label>
-        <label class="checkbox"><input type="checkbox" rel="IT" onchange="filter()"/>IT</label>
-        <label class="checkbox"><input type="checkbox" rel="ECE" onchange="filter()"/>ECE</label>
-        <label class="checkbox"><input type="checkbox" rel="EE" onchange="filter()"/>EE</label>
+        <label class="checkbox"><input type="checkbox" value="CS" onchange="filter()"/>CS</label>
+        <label class="checkbox"><input type="checkbox" value="IT" onchange="filter()"/>IT</label>
+        <label class="checkbox"><input type="checkbox" value="ECE" onchange="filter()"/>ECE</label>
+        <label class="checkbox"><input type="checkbox" value="EE" onchange="filter()"/>EE</label>
     </div>
 	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" rel="Grader" onchange="filter()"/>Grader</label>
-        <label class="checkbox"><input type="checkbox" rel="Instructor" onchange="filter()"/>Instructor</label>
+        <label class="checkbox"><input type="checkbox" value="Grader" onchange="filter()"/>Grader</label>
+        <label class="checkbox"><input type="checkbox" value="Instructor" onchange="filter()"/>Instructor</label>
     </div>
 	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" rel="Fall" onchange="filter()"/>Fall</label>
-        <label class="checkbox"><input type="checkbox" rel="Spring" onchange="filter()"/>Spring</label>
-        <label class="checkbox"><input type="checkbox" rel="Summer" onchange="filter()"/>Summer</label>
+        <label class="checkbox"><input type="checkbox" value="Fall" onchange="filter()"/>Fall</label>
+        <label class="checkbox"><input type="checkbox" value="Spring" onchange="filter()"/>Spring</label>
+        <label class="checkbox"><input type="checkbox" value="Summer" onchange="filter()"/>Summer</label>
     </div>
 	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" rel="grad" onchange="filter()"/>Graduate</label>
-        <label class="checkbox"><input type="checkbox" rel="undergrad" onchange="filter()"/>Undergraduate </label>
+        <label class="checkbox"><input type="checkbox" value="grad" onchange="filter()"/>Graduate</label>
+        <label class="checkbox"><input type="checkbox" value="undergrad" onchange="filter()"/>Undergraduate </label>
     </div>
-	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" rel="applicants" onchange="filter()" checked/>Applicants</label>
-        <label class="checkbox"><input type="checkbox" rel="noapplicants" onchange="filter()"/>No Applicants </label>
-    </div>
+	<!--<div class="checkbox">
+        <label class="checkbox"><input type="checkbox" value="applicants" onchange="filter()" checked/>Applicants</label>
+        <label class="checkbox"><input type="checkbox" value="noapplicants" onchange="filter()"/>No Applicants </label>
+    </div>-->
 </div>
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<label class="float-end"><span id="applicants">0 Applicants</span></label></h5>
+            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<!--<span class="float-end" id="applicants">0 Applicants</span>--></h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
 				
