--- a/src/applicants.html
+++ b/src/applicants.html
@@ -60,14 +60,16 @@
         <table class="table table-striped table-bordered" id="sortTable">
 			<thead>
 				<tr>
+				<th>Student Id</th>
 				<th>Name</th>
-				<th>GPA</th>
-				<th>Hours</th>
+				<th>Email</th>
 				<th>Level</th>
 				<th>Major</th>
-				<th>Student Id</th>
-				<th>Email</th>
+				<th>GPA</th>
+				<th>Hours</th>
+				<th>GTA Status</th>
 				<th>Documents</th>
+				<th></th>
 				</tr>
 			</thead>
             
